--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flexible_grid_view_plus
 description: Flexible grid view is a Flutter package that simplifies the process of creating a grid view. With FlexibleGridView, you don't need to specify the height of your children widgets.
 version: 1.0.0
-repository:
+repository: https://github.com/marmelad52/flexible_grid_view_plus
 
 homepage:
 platforms:
@@ -15,7 +15,7 @@ screenshots:
   - description: 'This screenshot shows the thumbnail of the package'
     path: lib/flexible grid view flutter package egor tabula.jpg
 environment:
-  sdk: ">=2.19.4 <3.0.0"
+  sdk: '>=2.19.4 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
